@@ -1,4 +1,5 @@
+DIST Openca-DBI.pm 113309 RMD160 620ac410f2ea9302c0682eab2336fcea3178f0e9 SHA1 fe22fb8f8ff3036833ad04d36dd14adcfe439890 SHA256 cf878a85a0b3d233b0080c2a2cfaa2d465aee39e563dba4e78fd95710424d3fc
 DIST openca-base-1.1.0.tar.gz 8075152 RMD160 840a3f5ab86bb409089c57e5c1c2878a2bc1e4d8 SHA1 9263f90bba9c10b5f0934c26df539e3cd0af98d1 SHA256 2bf47cb06ce74983544acdb546beeef4bb1b00dfd8a734a1e3254b5c4a80fbe4
-EBUILD OpenCA-DBI-1.11-r1.ebuild 774 RMD160 6ba2aed59c800b1d4e56d3148533cb602f5209f4 SHA1 a490010608a254033bd8620d28058ab2574e8105 SHA256 5504b721a01bac5a0584095c308c219cef29baed72510fc437928c3a377619ba
-MISC ChangeLog 503 RMD160 f542d442b6deda365e7e7dd4565750d49387811f SHA1 b511cbf880659113583b0f115faca05d25ceef83 SHA256 363708b26d0e887790f21781ffcfa047bc74270f07b340f92e44482b3be18d3f
+EBUILD OpenCA-DBI-1.11-r1.ebuild 996 RMD160 0e4444bf17f07a64b1067081fcdd1007c26c18b5 SHA1 66f9253064995392b4fee7e8cd6a59ac4beccdb9 SHA256 c7ea9e58c702d583c6e0202071249e7eb9bea1cd5a6020fd9ccc05c7d487b8e6
+MISC ChangeLog 675 RMD160 f87b543e7d0446188baee475a4a1ce50af751336 SHA1 d0a04e5e3258b7d1a4d832f45524437b2f905a95 SHA256 64cb932b52067af12431cb28ccb06b60115e80dffa855bfd54df6c93fb23e1fa
 MISC metadata.xml 451 RMD160 bebaf933574ed284d421b45f067228073e0e93ae SHA1 f1ced5ba9fd30a889e4b36958bae899ce228dd22 SHA256 2af9704b2f53dcd1979a249e4279d8e045b8ef10effe9def89623a6ece72063f
